--- a/C语言/笔记.md
+++ b/C语言/笔记.md
@@ -1130,7 +1130,7 @@ ___
 >
 >  ```
 >
-> ```
+>  ```
 >
 >```
 >
@@ -2996,3 +2996,184 @@ struct Player{    char name[10];    int ID;    int Age;    struct Player *ptr;};
 * 寻找到要删除的节点的前一个节点，来获取目的节点的地址
 * 调用目的节点的前一个节点的存储指针变量，重新赋值与目的节点的下一个节点地址值
 * 调用`free();`函数清除目的节点所占的空间
+
+### 二十六、文件操作：
+
+```c
+函数fopen()用来打开文件，返回值是一个文件指针(File Pointer)
+```
+
+==FILE是在`stdio.h`中定义的结构体类型，封装了与文件有关的信息。==
+
+* 可通过检查`fopen()`返回值是否为NULL来判断文件打开是否成功
+
+* 向一个文件中写入：
+
+* ```c
+  #include <stdlib.h>
+  #include "stdio.h"
+  int main(void){
+      FILE *ptr;
+      char ch;
+      ptr = fopen("D:\\Clauguge_study\\CLion 2021.1.1\\hello.txt","w+");
+      if(ptr==NULL){
+          printf("文件打开失败！");
+          exit(0);
+      } else{
+      ch = getchar();
+      while (ch != '\n'){//若键入回车换行符则结束键盘输入和文件写入
+          fputc(ch,ptr);
+          ch = getchar();
+      }
+      fclose(ptr);//关闭由函数fopen()打开的fp指向的文件
+      }
+  }
+  ```
+
+* ==注意：==使用`getchar()`输入字符时，是先将所有字符送入缓冲区，直到键入回车换行符后才从缓冲区逐个读出来并赋值给变量ch
+
+* 读取某个文件的数据：
+
+  * ```c
+    #include <stdlib.h>
+    #include "stdio.h"
+    int main(void){
+        FILE *ptr;
+        char ch;
+        ptr = fopen("D:\\Clauguge_study\\CLion 2021.1.1\\hello.txt","r+");
+        if(ptr==NULL){
+            printf("文件打开失败！");
+            exit(0);
+        } else{
+            while ((ch= fgetc(ptr))!=EOF){//从文件中读取字符直到文件末尾
+                putchar(ch);
+            }
+        fclose(ptr);//关闭由函数fopen()打开的fp指向的文件
+        }
+    }
+    ```
+
+  * `函数feof(文件指针)`用于检查是否达到文件末尾，当文件位置指针指向文件结束符时，返回==非0值==，否则返回==0值==。因此可以将上面语句替换：
+
+  * `feof(文件指针)`仅当读到文件结束符`EOF(-1)`时，才能判断出到达文件尾，即读完文件所有内容后，再执行一次读文件操作。
+
+    * 当一个字符一个字符读取时，可先输出再读取的操作来避免此现象：
+
+    * ```c
+      pos = ftell(fp);
+      c = fgetc(fp);
+      while(!feof(fp)){
+          printf("%c",c);
+          c = fgetc(fp);
+      }
+      ```
+
+    * ```c
+      while((c = fgetc(fp))!=EOF){
+          printf("%c",c);
+      }//此方法无法辨别是因为文件读取完成而退出的循环还是文件读取过程异而退出循环
+      ```
+
+  * 用函数`ferror(文件指针)`判断是否读取错误，出错返回非0，否则返回0；
+
+* `fclose`的返回值：
+
+  * 正常关闭返回0，关闭异常返回非0值
+
+#### 按格式读文件：
+
+格式：
+
+```c
+int fscanf(文件指针,格式化字符串,输入列表);
+```
+
+`fscanf()`格式化输出与 `scanf()`相同的
+
+**按字符读写：**
+
+> **文件写入：**
+>
+> ```c
+> int fgetc(文件指针);
+> //从文件指针 读取 一个字符，将位置指针指向下一个字符
+> //读取成功，返回读到的字符，结束或异常，返回EOF
+> ```
+>
+> **文件读出：**
+>
+> ```c
+> int fputc(int c,FILE *fp);
+> //向fp 输出 字符c
+> //若写入错误，返回EOF，否则返回字符c
+> ```
+>
+> `long ftell(文件指针)`返回当前文件指针的位置
+
+**按行读写文件：**
+
+> **文件写入：**
+>
+> ```c
+> int fputs(字符串,文件指针);
+> //将  字符串  写入文件中
+> //若出现写入错误，则返回EOF，否则返回非负数
+> //不会自动添加换行符，除非字符串本身含有换行符
+> ```
+>
+> ```c
+> int fscanf(文件指针,格式化字符串,输入列表);
+> fprintf(fp,"%s\t%s\t%d\t%s\n",person.name,person.sex,person.age,person.ID);
+> ```
+>
+> **文件读出：**
+>
+> ```c
+> char *fgets(字符串,int n,文件指针);
+> //从文件指针所指的文件中读取字符串，最多读取n-1个字符(n是缓冲区的大小)
+> //当读到回车换行符、文件末尾。或读满n-1个字符时，函数返回该字符串的首地址
+> //读取失败或者到达文件尾部返回NULL
+> //fgets保留并存储'\n'
+> ```
+>
+> ```c
+> int fscanf(文件指针,格式化字符串,输入列表);
+> //输入列表中是地址。
+> //与scanf输入形式一致
+> ```
+
+#### 文件的随机读写：
+
+* 文件从头到尾按字节从0开始顺序编址，用以表示数据的存储位置
+* 文件位置指针：`(Position pointer, 文件位置标记)`
+  * 指示打开文件的当前读写位置
+  * 对文件每读写一次，文件指针自动指向下一个读写位置，可方便地进行顺序读写
+  * 利用文件定位函数，还可实现随机读写
+
+**文件定位：**
+
+> * 使文件的位置指针重新指向文件的开始位置
+>
+>   * ```c
+>     void rewind(文件指针);
+>     ```
+>
+> * 返回当前文件位置指针(相当于文件起始位置的字节偏移量)
+>
+>   * ```c
+>     long ftell(文件指针);
+>     ```
+>
+> * 改变文件位置指针，实现随机读写
+>
+>   * ```c
+>     int fseek(文件指针,offset,fromwhere);
+>     ```
+>
+>   * `offset`:位置指针的偏移量(字节数)，long型，加 l或L
+>
+>   * `fromwhere`:起始位置：
+>
+>     * SEEK_SET或0-----文件开始
+>     * SEEK_CUR或1-----当前位置
+>     * SEEK_END或2-----文件末尾
