--- a/C语言/笔记.md
+++ b/C语言/笔记.md
@@ -1884,7 +1884,33 @@ printf("\"How are you.\"\n");//输出："How are you."//如果字符串太长怎
 **编写连接字符串的函数**
 
 ```c
-#include<stdio.h>#include<string.h>#include<stdlib.h>#define N 80char *MyStrcat(char *dstStr,char *srcStr);int main(){    char first[2*N+1];//这个数组足够大，用于存储2个字符串的连接存放    char second[N+1];    char *result = NULL;    printf("Input the first string:\n");    gets(first);    printf("Input the second string:\n");    gets(second);    result = MyStrcat(first,second);    printf("The result is: %s\n",result);    return 0;}char *MyStrcat(char *dstStr,char *srcStr){    char *pStr = dstStr;//保存目的字符串的首地址    while(*dstStr != '\0'){ //将指针移动到字符串末尾（结束标志处）        dstStr++;    }    while(*srcStr!='\0'){        *dstStr = *srcStr;        srcStr++;        dstStr++;    }    *dstStr = '\0';    return pStr;//指向连接后的字符串的首地址}
+#include<stdio.h>
+#include<string.h>
+#include<stdlib.h>
+#define N 80char *MyStrcat(char *dstStr,char *srcStr);
+int main(){    
+    char first[2*N+1];//这个数组足够大，用于存储2个字符串的连接存放    
+    char second[N+1];    
+    char *result = NULL;    
+    printf("Input the first string:\n");    
+    gets(first);    
+    printf("Input the second string:\n");    
+    gets(second);    
+    result = MyStrcat(first,second);    
+    printf("The result is: %s\n",result);    
+    return 0;
+}
+char *MyStrcat(char *dstStr,char *srcStr){    
+    char *pStr = dstStr;//保存目的字符串的首地址    
+    while(*dstStr != '\0'){ //将指针移动到字符串末尾（结束标志处）        
+        dstStr++;    }    
+    while(*srcStr!='\0'){        
+        *dstStr = *srcStr;        
+        srcStr++;        
+        dstStr++;    }    
+    *dstStr = '\0';    
+    return pStr;//指向连接后的字符串的首地址
+}
 ```
 
 ![](C:\Users\asus\Pictures\Screenshots\Snipaste_2020-12-30_20-37-36.png)
